# resposcry

./: .gitignore  .reposcryignore  AGENTS.md  BENCHMARKS.md  CRG_ONLY.md  Cargo.toml  FIXES_APPLIED.md  INSTALLERS_ADDED.md  LICENSE  README.md  RESPOSCRY_REMAINING_WORK_README (1).md  crg.rules.yaml  install.ps1  install.sh  update.py  updatereadmepin.py
.crg/agents/: codex.md  common.md
.crg/hooks/: post-edit.md  pre-edit.md
.crg/skills/code-review-graph/: SKILL.md
.github/workflows/: ci.yml  release.yml
.reposcry/: AI_CONTEXT.md
benchmarks/: COMPARE_REPOSCRY_VS_CRG.md  SCORING_V2_SUMMARY.md  fair_benchmark.py  fixtures.json  score_v2.py
benchmarks/agent/: README.md  RESULTS_TEMPLATE.json  run.py  tasks.json
benchmarks/fixtures/large_repo/: package.json
benchmarks/fixtures/large_repo/apps/admin/: package.json
benchmarks/fixtures/large_repo/apps/admin/app/: page.tsx
benchmarks/fixtures/large_repo/apps/admin/app/api/rebuild/: route.ts
benchmarks/fixtures/large_repo/apps/admin/lib/: graph.ts
benchmarks/fixtures/large_repo/apps/dashboard/: package.json
benchmarks/fixtures/large_repo/apps/dashboard/app/: page.tsx
benchmarks/fixtures/large_repo/apps/dashboard/app/graphs/[id]/: page.tsx
benchmarks/fixtures/large_repo/apps/dashboard/lib/: graph.ts
benchmarks/fixtures/large_repo/crates/api/: Cargo.toml
benchmarks/fixtures/large_repo/crates/api/src/: main.rs  routes.rs
benchmarks/fixtures/large_repo/crates/indexer/: Cargo.toml
benchmarks/fixtures/large_repo/crates/indexer/src/: graph.rs  main.rs
benchmarks/fixtures/medium_nextjs_repo/: middleware.ts  package.json  tsconfig.json
benchmarks/fixtures/medium_nextjs_repo/app/: actions.ts  page.tsx
benchmarks/fixtures/medium_nextjs_repo/app/api/graph/: route.ts
benchmarks/fixtures/medium_nextjs_repo/components/: GraphPanel.tsx
benchmarks/fixtures/medium_nextjs_repo/lib/: cache.ts  graph.ts  queries.ts
benchmarks/fixtures/mixed_monorepo/: package.json
benchmarks/fixtures/mixed_monorepo/apps/web/: package.json
benchmarks/fixtures/mixed_monorepo/apps/web/app/: page.tsx
benchmarks/fixtures/mixed_monorepo/apps/web/lib/: graph.ts
benchmarks/fixtures/mixed_monorepo/crates/worker/: Cargo.toml
benchmarks/fixtures/mixed_monorepo/crates/worker/src/: graph.rs  main.rs
benchmarks/fixtures/small_rust_repo/: .reposcryignore  Cargo.toml
benchmarks/fixtures/small_rust_repo/src/: cache.rs  graph.rs  lib.rs  main.rs
benchmarks/fixtures/small_rust_repo/tests/: rebuild.rs
crates/reposcry-cache/: Cargo.toml
crates/reposcry-cache/src/: db.rs  file_hasher.rs  lib.rs
crates/reposcry-cli/: Cargo.toml  build.rs
crates/reposcry-cli/src/: crg_cli.rs  installer.rs  main.rs
crates/reposcry-context/: Cargo.toml
crates/reposcry-context/src/: lib.rs
crates/reposcry-git/: Cargo.toml
crates/reposcry-git/src/: lib.rs
crates/reposcry-graph/: Cargo.toml
crates/reposcry-graph/src/: edge.rs  graph.rs  import.rs  language.rs  lib.rs  metrics.rs  node.rs  symbol.rs
crates/reposcry-indexer/: Cargo.toml
crates/reposcry-indexer/src/: lib.rs  parser.rs  preset.rs  resolver.rs  scanner.rs
crates/reposcry-report/: Cargo.toml
crates/reposcry-report/src/: lib.rs
crates/reposcry-rules/: Cargo.toml
crates/reposcry-rules/src/: lib.rs
docs/: architecture.md  benchmarks.md  code-review-graph-compat.md  incremental-update-plan.md  language-support.md  mcp.md
scripts/: bench-all-fixtures.ps1  bench-all-fixtures.sh  bench-code-review-graph.py  bench.ps1  bench.sh  crg-context.ps1  crg-context.sh  crg-validate.ps1  crg-validate.sh  fix-newlines.ps1  reposcry-context.ps1  reposcry-context.sh  reposcry-update.ps1  reposcry-update.sh  reposcry-validate.ps1  reposcry-validate.sh  reposcry-watch.ps1  reposcry-watch.sh  setup-benchmark-fixtures.ps1  setup-benchmark-fixtures.sh  smoke-readme.ps1  smoke-readme.sh  smoke-release.ps1  smoke-release.sh
update-packages/: publish.ps1
