[package]
name = "reposcry-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
reposcry-graph = { path = "../reposcry-graph" }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
