[package]
name = "reposcry-cli"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "reposcry"
path = "src/main.rs"

[[bin]]
name = "reposcry-update"
path = "src/bin/reposcry-update.rs"

[dependencies]
reposcry-graph = { path = "../reposcry-graph" }
reposcry-indexer = { path = "../reposcry-indexer" }
reposcry-cache = { path = "../reposcry-cache" }
reposcry-git = { path = "../reposcry-git" }
reposcry-context = { path = "../reposcry-context" }
reposcry-rules = { path = "../reposcry-rules" }
reposcry-report = { path = "../reposcry-report" }

clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
fastembed = { version = "5.13.4", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls", "nomic-v2-moe", "qwen3"] }
candle-core = "0.10.2"