[package]
name = "reposcry-git"
version = "0.1.0"
edition = "2021"
description = "Git diff and repository change detection helpers for RepoScry."
license = "MIT"
repository = "https://github.com/zibouddd/resposcry"
homepage = "https://github.com/zibouddd/resposcry"
documentation = "https://docs.rs/reposcry-git"
keywords = ["git", "diff", "repo", "ai", "graph"]
categories = ["development-tools"]

[dependencies]
reposcry-graph = { version = "0.1.0", path = "../reposcry-graph" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
