[package]
name = "reposcry-indexer"
version = "0.1.2"
edition = "2021"
description = "Repository scanner and AST parser engine for RepoScry code graph indexing."
license = "MIT"
repository = "https://github.com/zibouddd/reposcry"
homepage = "https://github.com/zibouddd/reposcry"
documentation = "https://docs.rs/reposcry-indexer"
keywords = ["indexer", "repo", "graph", "ast", "ai"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
reposcry-graph = { version = "0.1.2", path = "../reposcry-graph" }
reposcry-cache = { version = "0.1.2", path = "../reposcry-cache" }
ignore = "0.4"
walkdir = "2"
globset = "0.4"
blake3 = "1"
rayon = "1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-json = "0.24"
tree-sitter-toml = "0.20"
tree-sitter-yaml = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
thiserror = "2"
