[package]
name = "reposcry-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
reposcry-graph = { path = "../reposcry-graph" }
reposcry-indexer = { path = "../reposcry-indexer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
globset = "0.4"
anyhow = "1"
tracing = "0.1"
